--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -22,9 +22,12 @@
             </intent-filter>
         </activity>
         <activity android:name=".Order"></activity>
-        />
+
         <activity android:name=".Recycler" />
         <activity android:name=".recycler_delivery"></activity>
+        <activity android:name=".Navigation">
+
+        </activity>
 
         <meta-data
             android:name="preloaded_fonts"
